--- a/eBooksDT/eBooksDT.Core/eBooksDT.Core.csproj
+++ b/eBooksDT/eBooksDT.Core/eBooksDT.Core.csproj
@@ -28,13 +28,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IBooksService.cs" />
+    <Compile Include="Models\DetailedBook.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Interfaces\IMovieService.cs" />
     <Compile Include="Models\TMDBContracts.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Models\DetailedMovie.cs" />
     <Compile Include="Constants\AppConstants.cs" />
-    <Compile Include="Services\Book.cs" />
+    <Compile Include="Models\Book.cs" />
     <Compile Include="Services\Books.cs" />
     <Compile Include="Services\Program.cs" />
     <Compile Include="Services\SerializeHelper.cs" />
